@@ -165,6 +165,17 @@
         <!-- Repack as .orig.tar.gz for source package
              Given an identical source package, the archive must be identical every time -->
         <echo message="*** Repack as .orig.tar.gz ***" />
+        <!-- Set standard file permissions (depends on umask otherwise) -->
+        <chmod perm="0644">
+            <fileset dir="${out.dir}/${package.name}-${debian.version}">
+                <include name="**" />
+            </fileset>
+        </chmod>
+        <chmod perm="0755">
+             <dirset dir="${out.dir}/${package.name}-${debian.version}">
+                <include name="**" />
+            </dirset>
+        </chmod>
         <!-- Since preservelastmodified doesn't seem to work correctly, set all files to fixed date -->
         <touch datetime="01/01/2000 1:00 am">
             <fileset dir="${out.dir}/${package.name}-${debian.version}">
@@ -184,14 +195,14 @@
             <filter token="package.name" value="${package.name}" />
             <filter token="package.name.clean" value="${package.name.clean}" />
             <filter token="package.fullversion" value="${debian.version}-${debian.revision}" />
-            <filter token="nuxeo.home.dir" value="/opt/${package.name}" />
+            <filter token="nuxeo.home.dir" value="/var/lib/${package.name}/server" />
             <filter token="nuxeo.etc.dir" value="/etc/${package.name}" />
-            <filter token="nuxeo.data.dir" value="/var/lib/${package.name}" />
+            <filter token="nuxeo.data.dir" value="/var/lib/${package.name}/data" />
             <filter token="nuxeo.log.dir" value="/var/log/${package.name}" />
             <filter token="nuxeo.pid.dir" value="/var/run/${package.name}" />
             <!-- specific to the tomcat distributions -->
-            <filter token="nxserver.config.dir" value="/opt/${package.name}/nxserver/config" />
-            <filter token="nxserver.bundle.dir" value="/opt/${package.name}/nxserver/bundles" />
+            <filter token="nxserver.config.dir" value="/var/lib/${package.name}/server/nxserver/config" />
+            <filter token="nxserver.bundle.dir" value="/var/lib/${package.name}/server/nxserver/bundles" />
         </filterset>
         <copy todir="${out.dir}/${package.name}-${debian.version}/debian">
             <fileset dir="${maven.basedir}/resources/debian">
@@ -205,6 +216,16 @@
             </fileset>
             <filterset refid="nxvars" />
         </copy>
+        <chmod perm="0644">
+            <fileset dir="${out.dir}/${package.name}-${debian.version}/static_lib">
+                <include name="**" />
+            </fileset>
+        </chmod>
+        <chmod perm="0755">
+             <dirset dir="${out.dir}/${package.name}-${debian.version}/static_lib">
+                <include name="**" />
+            </dirset>
+        </chmod>
         <if>
             <not>
                 <equals arg1="nuxeo" arg2="${package.name}" />
