@@ -3,6 +3,8 @@
 export DH_VERBOSE=1
 
 build: build-stamp
+build-arch: build
+build-indep: build
 
 build-stamp:
 	dh_testdir
